@@ -178,6 +178,7 @@ import uk.gov.justice.core.courts.ProsecutionCasesToRemove;
 import uk.gov.justice.core.courts.Prosecutor;
 import uk.gov.justice.core.courts.ReapplyMiReportingRestrictions;
 import uk.gov.justice.core.courts.ReceiveRepresentationOrderForDefendant;
+import uk.gov.justice.core.courts.ReplayedDefendantsAddedToCourtProceedings;
 import uk.gov.justice.core.courts.ReportingRestriction;
 import uk.gov.justice.core.courts.UpdatedOrganisation;
 import uk.gov.justice.cpp.progression.events.DefendantDefenceAssociationLocked;
@@ -616,18 +617,26 @@ public class CaseAggregate implements Aggregate {
                 final Set<uk.gov.justice.core.courts.Offence> offenceSet = new TreeSet<>((o1, o2) -> o1.getId().compareTo(o2.getId()));
                 offenceSet.addAll(prosecutionCaseOffencesUpdated.getDefendantCaseOffences().getOffences());
                 offenceSet.addAll(defendant.getOffences());
-                Defendant.Builder builder = Defendant.defendant().withValuesFrom(defendant);
+                final Defendant latestDefendant = this.defendantsMap.getOrDefault(defendant.getId(), defendant);
+                final Defendant.Builder builder = Defendant.defendant().withValuesFrom(latestDefendant);
+                applyDefendantFallbacks(defendant, latestDefendant, builder);
                 uk.gov.moj.cpp.progression.events.CustodialEstablishment custodialEstablishment = defendantCustodialEstablishmentMap.get(defendant.getId());
                 if (custodialEstablishment != null) {
                     final uk.gov.justice.core.courts.CustodialEstablishment.Builder custodialEstablishmentBuilder = uk.gov.justice.core.courts.CustodialEstablishment.custodialEstablishment();
                     custodialEstablishmentBuilder.withCustody(custodialEstablishment.getCustody())
                             .withId(custodialEstablishment.getId())
                             .withName(custodialEstablishment.getName());
-                    Defendant latestDefendant = this.defendantsMap.get(defendant.getId());
-                    PersonDefendant personDefendant = PersonDefendant.personDefendant().withValuesFrom(defendant.getPersonDefendant())
-                            .withBailStatus(latestDefendant.getPersonDefendant().getBailStatus())
-                            .withCustodialEstablishment(custodialEstablishmentBuilder.build()).build();
-                    builder.withPersonDefendant(personDefendant);
+                    final PersonDefendant basePersonDefendant = nonNull(latestDefendant.getPersonDefendant())
+                            ? latestDefendant.getPersonDefendant()
+                            : defendant.getPersonDefendant();
+                    if (nonNull(basePersonDefendant)) {
+                        final PersonDefendant personDefendant = PersonDefendant.personDefendant().withValuesFrom(basePersonDefendant)
+                                .withBailStatus(latestDefendant.getPersonDefendant() != null
+                                        ? latestDefendant.getPersonDefendant().getBailStatus()
+                                        : basePersonDefendant.getBailStatus())
+                                .withCustodialEstablishment(custodialEstablishmentBuilder.build()).build();
+                        builder.withPersonDefendant(personDefendant);
+                    }
                 }
                 defendantList.add(builder.withOffences(offenceSet.stream().collect(toList()))
                         .build());
@@ -646,6 +655,61 @@ public class CaseAggregate implements Aggregate {
                         .collect(Collectors.toMap(uk.gov.justice.core.courts.Defendant::getId, Function.identity()))
         );
 
+
+    }
+
+    private void applyDefendantFallbacks(final Defendant fallbackDefendant, final Defendant latestDefendant, final Defendant.Builder builder) {
+        if (isNull(latestDefendant.getMasterDefendantId()) && nonNull(fallbackDefendant.getMasterDefendantId())) {
+            builder.withMasterDefendantId(fallbackDefendant.getMasterDefendantId());
+        }
+        if (isNull(latestDefendant.getProsecutionCaseId()) && nonNull(fallbackDefendant.getProsecutionCaseId())) {
+            builder.withProsecutionCaseId(fallbackDefendant.getProsecutionCaseId());
+        }
+        if (isNull(latestDefendant.getNumberOfPreviousConvictionsCited()) && nonNull(fallbackDefendant.getNumberOfPreviousConvictionsCited())) {
+            builder.withNumberOfPreviousConvictionsCited(fallbackDefendant.getNumberOfPreviousConvictionsCited());
+        }
+        if (isNull(latestDefendant.getProsecutionAuthorityReference()) && nonNull(fallbackDefendant.getProsecutionAuthorityReference())) {
+            builder.withProsecutionAuthorityReference(fallbackDefendant.getProsecutionAuthorityReference());
+        }
+        if (isNull(latestDefendant.getWitnessStatement()) && nonNull(fallbackDefendant.getWitnessStatement())) {
+            builder.withWitnessStatement(fallbackDefendant.getWitnessStatement());
+        }
+        if (isNull(latestDefendant.getWitnessStatementWelsh()) && nonNull(fallbackDefendant.getWitnessStatementWelsh())) {
+            builder.withWitnessStatementWelsh(fallbackDefendant.getWitnessStatementWelsh());
+        }
+        if (isNull(latestDefendant.getMitigation()) && nonNull(fallbackDefendant.getMitigation())) {
+            builder.withMitigation(fallbackDefendant.getMitigation());
+        }
+        if (isNull(latestDefendant.getMitigationWelsh()) && nonNull(fallbackDefendant.getMitigationWelsh())) {
+            builder.withMitigationWelsh(fallbackDefendant.getMitigationWelsh());
+        }
+        if (isNull(latestDefendant.getAssociatedPersons()) && nonNull(fallbackDefendant.getAssociatedPersons())) {
+            builder.withAssociatedPersons(fallbackDefendant.getAssociatedPersons());
+        }
+        if (isNull(latestDefendant.getDefenceOrganisation()) && nonNull(fallbackDefendant.getDefenceOrganisation())) {
+            builder.withDefenceOrganisation(fallbackDefendant.getDefenceOrganisation());
+        }
+        if (isNull(latestDefendant.getPersonDefendant()) && nonNull(fallbackDefendant.getPersonDefendant())) {
+            builder.withPersonDefendant(fallbackDefendant.getPersonDefendant());
+        }
+        if (isNull(latestDefendant.getLegalEntityDefendant()) && nonNull(fallbackDefendant.getLegalEntityDefendant())) {
+            builder.withLegalEntityDefendant(fallbackDefendant.getLegalEntityDefendant());
+        }
+        if (isNull(latestDefendant.getPncId()) && nonNull(fallbackDefendant.getPncId())) {
+            builder.withPncId(fallbackDefendant.getPncId());
+        }
+        if (isNull(latestDefendant.getAliases()) && nonNull(fallbackDefendant.getAliases())) {
+            builder.withAliases(fallbackDefendant.getAliases());
+        }
+        if (isNull(latestDefendant.getIsYouth()) && nonNull(fallbackDefendant.getIsYouth())) {
+            builder.withIsYouth(fallbackDefendant.getIsYouth());
+        }
+        if (isNull(latestDefendant.getAssociatedDefenceOrganisation()) && nonNull(fallbackDefendant.getAssociatedDefenceOrganisation())) {
+            builder.withAssociatedDefenceOrganisation(fallbackDefendant.getAssociatedDefenceOrganisation());
+        }
+        if (isNull(latestDefendant.getCroNumber()) && nonNull(fallbackDefendant.getCroNumber())) {
+            builder.withCroNumber(fallbackDefendant.getCroNumber());
+        }
 
     }
 
@@ -1045,6 +1109,17 @@ public class CaseAggregate implements Aggregate {
         );
     }
 
+    public Stream<Object> replayDefendantsAddedToCourtProceedings(final List<Defendant> defendants, final List<ListHearingRequest> listHearingRequests, final Integer interval) {
+
+        final ReplayedDefendantsAddedToCourtProceedings replayedDefendantsAddedToCourtProceedings = ReplayedDefendantsAddedToCourtProceedings.replayedDefendantsAddedToCourtProceedings()
+                    .withDefendants(defendants)
+                    .withListHearingRequests(listHearingRequests)
+                    .withInterval(interval)
+                    .build();
+
+        return apply(Stream.of(replayedDefendantsAddedToCourtProceedings));
+    }
+
     /**
      * Stores defendants and list hearing requests (to be added to hearing) in aggregate if the
      * prosecution case has not been created in hearing context - event
@@ -1140,7 +1215,7 @@ public class CaseAggregate implements Aggregate {
 
         final List<UUID> filteredApplicationHearingIds = allHearingIdsForCase.stream()
                 .filter(id -> !hearingIds.contains(id))
-                .collect(Collectors.toList());
+                .toList();
         if (isNotEmpty(filteredApplicationHearingIds)) {
             if (LOGGER.isInfoEnabled()) {
                 LOGGER.info("filteredApplicationHearingIds for which event raised : {}", filteredApplicationHearingIds);
@@ -1296,7 +1371,7 @@ public class CaseAggregate implements Aggregate {
                     LOGGER.info("CaseAggregateInfo: updateDefendantCustodialInformationDetails case {} defendant {} condition failed [defendantsMap.containsKey()]", caseId, defendantId);
                 }
 
-                if (nonNull(defendantProceedingConcluded.get(caseId)) && defendantProceedingConcluded.get(caseId).get(defendantId)) {
+                if (nonNull(defendantProceedingConcluded.get(caseId)) && TRUE.equals(defendantProceedingConcluded.get(caseId).get(defendantId))) {
                     LOGGER.info("CaseAggregateInfo: updateDefendantCustodialInformationDetails defendant {} : defendantProceedingConcluded.get(caseId).get(defendantId) is true", defendantId);
                 }
                 continue;
@@ -1361,7 +1436,7 @@ public class CaseAggregate implements Aggregate {
 
             final List<UUID> filteredApplicationHearingIds = allHearingIdsForCase.stream()
                     .filter(id -> !hearingIds.contains(id))
-                    .collect(Collectors.toList());
+                    .toList();
             if (isNotEmpty(filteredApplicationHearingIds)) {
                 if (LOGGER.isInfoEnabled()) {
                     LOGGER.info("filteredApplicationHearingIds for which event raised : {}", filteredApplicationHearingIds);
@@ -1636,7 +1711,7 @@ public class CaseAggregate implements Aggregate {
 
         final List<UUID> caseDefendantsFromCurrentHearing = prosecutionCase.getDefendants().stream()
                 .map(uk.gov.justice.core.courts.Defendant::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         final Map<UUID, Boolean> otherCaseDefendantsNotRepresentedOnCurrentHearing = getOtherCaseDefendantsNotRepresentedOnCurrentHearing(caseDefendantsFromDefendantProceedingsConcluded, caseDefendantsFromCurrentHearing);
 
@@ -1735,7 +1810,7 @@ public class CaseAggregate implements Aggregate {
                 newOffences.add(offence);
             }
             return offence;
-        }).collect(toList());
+        }).toList();
 
         final DefendantCaseOffences newDefendantCaseOffences = DefendantCaseOffences.defendantCaseOffences()
                 .withOffences(allOffences)
@@ -1751,7 +1826,7 @@ public class CaseAggregate implements Aggregate {
             final AllHearingOffencesUpdatedV2.Builder allHearingOffencesUpdatedV2 = AllHearingOffencesUpdatedV2.allHearingOffencesUpdatedV2();
             allHearingOffencesUpdatedV2.withHearingIds(new ArrayList<>(hearingIds)).
                     withDefendantId(defendantId).build();
-            final List<uk.gov.justice.core.courts.Offence> updatedOffences = allOffences.stream().filter(offence -> !newOffences.contains(offence)).collect(toList());
+            final List<uk.gov.justice.core.courts.Offence> updatedOffences = allOffences.stream().filter(offence -> !newOffences.contains(offence)).toList();
             if (!updatedOffences.isEmpty()) {
                 allHearingOffencesUpdatedV2.withUpdatedOffences(updatedOffences);
             }
@@ -2404,7 +2479,7 @@ public class CaseAggregate implements Aggregate {
                 streamBuilder.add(MasterDefendantIdUpdatedIntoHearings.masterDefendantIdUpdatedIntoHearings()
                         .withDefendant(defendantsMap.get(defendantId))
                         .withMatchedDefendants(transform(matchDefendant.getMatchedDefendants()))
-                        .withHearingIds(this.hearingIds.stream().collect(toList()))
+                        .withHearingIds(this.hearingIds.stream().toList())
                         .withProsecutionCaseId(matchDefendant.getProsecutionCaseId())
                         .build());
             } else {
@@ -2524,7 +2599,7 @@ public class CaseAggregate implements Aggregate {
                                         .withCaseUrn(ctu.getCaseUrn())
                                         .withLinkGroupId(ctu.getLinkGroupId())
                                         .build())
-                                .collect(Collectors.toList())
+                                .toList()
                 )
                 .build();
 
@@ -2560,7 +2635,7 @@ public class CaseAggregate implements Aggregate {
         return apply(Stream.of(HearingDeletedForProsecutionCase.hearingDeletedForProsecutionCase()
                 .withProsecutionCaseId(prosecutionCaseId)
                 .withHearingId(hearingId)
-                .withDefendantIds(prosecutionCase.getDefendants().stream().map(uk.gov.justice.core.courts.Defendant::getId).collect(toList()))
+                .withDefendantIds(prosecutionCase.getDefendants().stream().map(uk.gov.justice.core.courts.Defendant::getId).toList())
                 .build()));
     }
 
@@ -2624,7 +2699,7 @@ public class CaseAggregate implements Aggregate {
                             .withListingNumber(ofNullable(offence.getListingNumber()).orElse(0) + 1)
                             .withOffenceId(offence.getId())
                             .build())
-                    .collect(toList());
+                    .toList();
 
             return apply(Stream.builder()
                     .add(ProsecutionCaseListingNumberIncreased.prosecutionCaseListingNumberIncreased()
@@ -2713,7 +2788,7 @@ public class CaseAggregate implements Aggregate {
                         .withMasterDefendantId(matchedDefendant.getMasterDefendantId())
                         .withCourtProceedingsInitiated(matchedDefendant.getCourtProceedingsInitiated())
                         .build())
-                .collect(toList());
+                .toList();
     }
 
     private List<MatchedDefendants> transformToExactMatchedDefendants(final List<Cases> casesList) {
@@ -2759,7 +2834,7 @@ public class CaseAggregate implements Aggregate {
                         .withRepresentationType(RepresentationType.REPRESENTATION_ORDER)
                         .build());
             } else {
-                if (!isAlreadyAssociatedToOrganisation(defendantId, organisationId) || !(defendantOrganisationAsscociatedByRepOrder.getOrDefault(defendantId, false))) {                    // Handle wrong payload case, when it is not actually associated by payload says organisation is associated.
+                if (!isAlreadyAssociatedToOrganisation(defendantId, organisationId) || FALSE.equals(defendantOrganisationAsscociatedByRepOrder.getOrDefault(defendantId, false))) {                    // Handle wrong payload case, when it is not actually associated by payload says organisation is associated.
                     streamBuilder.add(DefendantDefenceOrganisationAssociated.defendantDefenceOrganisationAssociated()
                             .withDefendantId(defendantId)
                             .withLaaContractNumber(laaContractNumber)
@@ -2775,7 +2850,7 @@ public class CaseAggregate implements Aggregate {
         } else {
             if (organisationId != null) {
                 // Associate the one which is linked with one from payload
-                if (!isAlreadyAssociatedToOrganisation(defendantId, organisationId) || !(defendantOrganisationAsscociatedByRepOrder.getOrDefault(defendantId, false))) {
+                if (!isAlreadyAssociatedToOrganisation(defendantId, organisationId) || (FALSE.equals(defendantOrganisationAsscociatedByRepOrder.getOrDefault(defendantId, false)))) {
                     streamBuilder.add(DefendantDefenceOrganisationAssociated.defendantDefenceOrganisationAssociated()
                             .withDefendantId(defendantId)
                             .withLaaContractNumber(laaContractNumber)
@@ -2801,7 +2876,7 @@ public class CaseAggregate implements Aggregate {
     private String getDefendantLevelLegalStatus(final List<uk.gov.justice.core.courts.Offence> offencesList) {
         final List<String> defendantLevelStatusList = offencesList.stream().filter(offence -> nonNull(offence.getLaaApplnReference()))
                 .map(uk.gov.justice.core.courts.Offence::getLaaApplnReference)
-                .map(LaaReference::getOffenceLevelStatus).collect(toList());
+                .map(LaaReference::getOffenceLevelStatus).toList();
         if (defendantLevelStatusList.stream().anyMatch
                 (defendantLevelStatus -> defendantLevelStatus != null && defendantLevelStatus.equals(GRANTED.getDescription()))) {
             return GRANTED.getDescription();
@@ -2913,7 +2988,7 @@ public class CaseAggregate implements Aggregate {
 
     private void updateProsecutionCaseIdentifier(final CaseCpsProsecutorUpdated caseCpsProsecutorUpdated) {
         Prosecutor prosecutor = null;
-        if (isNull(caseCpsProsecutorUpdated.getIsCpsOrgVerifyError()) || !caseCpsProsecutorUpdated.getIsCpsOrgVerifyError()) {
+        if (isNull(caseCpsProsecutorUpdated.getIsCpsOrgVerifyError()) || FALSE.equals(caseCpsProsecutorUpdated.getIsCpsOrgVerifyError())) {
             prosecutor = Prosecutor.prosecutor()
                     .withAddress(caseCpsProsecutorUpdated.getAddress())
                     .withProsecutorCode(caseCpsProsecutorUpdated.getProsecutionAuthorityCode())
@@ -2965,7 +3040,7 @@ public class CaseAggregate implements Aggregate {
     public Stream<Object> extendCustodyTimeLimit(final UUID hearingId, final UUID offenceId, final LocalDate extendedTimeLimit) {
         final List<UUID> extendHearingIds = this.hearingIds.stream()
                 .filter(id -> !id.equals(hearingId))
-                .collect(toList());
+                .toList();
 
         if (extendHearingIds.isEmpty()) {
             return empty();
@@ -2982,7 +3057,7 @@ public class CaseAggregate implements Aggregate {
     private List<uk.gov.justice.core.courts.Defendant> updateDefendantWithProceedingsConcludedStatusAndOriginalListingNumbers(final ProsecutionCase prosecutionCaseFromCommand) {
         final List<uk.gov.justice.core.courts.Defendant> updatedDefendants = prosecutionCaseFromCommand.getDefendants().stream()
                 .map(defendant -> getUpdatedDefendant(defendant))
-                .collect(Collectors.toList());
+                .toList();
 
         final Map<UUID, Integer> listingMap = this.prosecutionCase.getDefendants().stream()
                 .flatMap(defendant -> defendant.getOffences().stream())
@@ -2994,8 +3069,8 @@ public class CaseAggregate implements Aggregate {
                 .withOffences(defendant.getOffences().stream().map(offence -> uk.gov.justice.core.courts.Offence.offence()
                         .withValuesFrom(offence)
                         .withListingNumber(listingMap.get(offence.getId()))
-                        .build()).collect(toList()))
-                .build()).collect(toList());
+                        .build()).toList())
+                .build()).toList();
     }
 
     private uk.gov.justice.core.courts.Defendant getUpdatedDefendant(final uk.gov.justice.core.courts.Defendant defendant) {
@@ -3133,7 +3208,7 @@ public class CaseAggregate implements Aggregate {
     private List<PetDefendants> buildPetDefendants(final List<UUID> defendantIds) {
         return defendantIds.stream().map(entry -> PetDefendants.petDefendants()
                 .withDefendantId(entry)
-                .build()).collect(toList());
+                .build()).toList();
     }
 
     public Stream<Object> updatePetForm(final UUID caseId, final String petFormData,
@@ -3261,7 +3336,7 @@ public class CaseAggregate implements Aggregate {
                 .map(this::buildDefendantForPet)
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(toList());
+                .toList();
     }
 
     public Stream<Object> recordOnlinePlea(final PleadOnline pleadOnline) {
@@ -3490,7 +3565,7 @@ public class CaseAggregate implements Aggregate {
                         .withMaterialId(UUID.randomUUID())
                         .withHearingDateTime(hearingDateTime)
                         .build())
-                .collect(toList());
+                .toList();
 
         return apply(formFinalisedList.stream().map(formFinalised -> formFinalised));
     }
@@ -3553,7 +3628,7 @@ public class CaseAggregate implements Aggregate {
     private List<FormDefendants> buildDefendants(final List<UUID> defendantIds) {
         return defendantIds.stream().map(entry -> formDefendants()
                 .withDefendantId(entry)
-                .build()).collect(toList());
+                .build()).toList();
     }
 
     private void updateFormOnFormUpdate(final FormUpdated formUpdated) {
@@ -3599,7 +3674,7 @@ public class CaseAggregate implements Aggregate {
         final Form form = formMap.get(editFormRequested.getCourtFormId());
         final FormLockStatus lockStatus = form.getFormLockStatus();
 
-        if (nonNull(editFormRequested.getLockStatus().getIsLockAcquirable()) && editFormRequested.getLockStatus().getIsLockAcquirable()) {
+        if (nonNull(editFormRequested.getLockStatus().getIsLockAcquirable()) && TRUE.equals(editFormRequested.getLockStatus().getIsLockAcquirable())) {
             lockStatus.setLockedBy(editFormRequested.getLockStatus().getLockRequestedBy());
             lockStatus.setLockExpiryTime(editFormRequested.getLockStatus().getExpiryTime());
             form.setFormLockStatus(lockStatus);
@@ -3667,12 +3742,16 @@ public class CaseAggregate implements Aggregate {
         final ProsecutionCase caseForHearing = ProsecutionCase.prosecutionCase().withValuesFrom(this.getProsecutionCase())
                 .withDefendants(this.getProsecutionCase().getDefendants().stream()
                         .filter(def -> defendantsIds.contains(def.getId()))
-                        .map(def -> uk.gov.justice.core.courts.Defendant.defendant().withValuesFrom(def)
-                                .withOffences(ofNullable(this.defendantCaseOffences.get(def.getId())).map(Collection::stream).orElseGet(Stream::empty)
-                                        .filter(off -> offenceIds.contains(off.getId())).toList())
-
-                                .build())
-                        .collect(Collectors.toList()))
+                        .map(def -> {
+                            final uk.gov.justice.core.courts.Defendant latestDefendant = this.defendantsMap.getOrDefault(def.getId(), def);
+                            final uk.gov.justice.core.courts.Defendant.Builder builder = uk.gov.justice.core.courts.Defendant.defendant()
+                                    .withValuesFrom(latestDefendant);
+                            applyDefendantFallbacks(def, latestDefendant, builder);
+                            return builder.withOffences(ofNullable(this.defendantCaseOffences.get(def.getId())).map(Collection::stream).orElseGet(Stream::empty)
+                                            .filter(off -> offenceIds.contains(off.getId())).toList())
+                                    .build();
+                        })
+                        .toList())
                 .build();
 
         final Stream.Builder<Object> streamBuilder = Stream.builder();
